--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
   "license": "MIT",
   "devDependencies": {
     "browserify": "^4.1.9",
-    "chai": "^1.9.1",
-    "jquery": "~2.1.0",
-    "karma": "^0.12.16",
-    "karma-browserifast": "^0.6.1",
+    "chai": "^1.10.0",
+    "jquery": "^2.1.1",
+    "karma": "^0.12.28",
+    "karma-browserifast": "^0.7.0",
+    "karma-browserify": "^1.0.0",
     "karma-chai": "^0.1.0",
-    "karma-mocha": "^0.1.3",
-    "karma-mocha-reporter": "^0.2.5",
+    "karma-mocha": "^0.1.9",
+    "karma-mocha-reporter": "^0.3.1",
     "karma-phantomjs-launcher": "^0.1.4",
-    "karma-sinon": "^1.0.3",
-    "mocha": "^1.20.1",
-    "sinon": "^1.10.2",
-    "yadda": "^0.10.13"
+    "karma-sinon": "^1.0.4",
+    "mocha": "^2.0.1",
+    "sinon": "^1.12.1",
+    "yadda": "^0.11.2"
   }
 }
